--- a/styles/product.css
+++ b/styles/product.css
@@ -339,6 +339,7 @@ section
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
+    font-family: 'Faster One';
 }
 .header.scrolled .logo a
 {
@@ -789,7 +790,7 @@ section
 .home
 {
 	width: 100%;
-	height: 625px;
+	height: 400px;
 	background: #FFFFFF;
 	z-index: 2;
 	padding-top: 130px;
@@ -835,6 +836,7 @@ section
 	color: #FFFFFF;
 	line-height: 1;
     font-family: 'Rakkas';
+    -webkit-text-stroke: 2px black;
 }
 .home_title span
 {
