--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -846,6 +846,27 @@ section
 {
 	width: 580px;
 }
+.home_title
+{
+	font-size: 75px;
+	font-weight: 600;
+	color: #FFFFFF;
+	line-height: 1;
+    font-family: 'Rakkas';
+    -webkit-text-stroke: 2px black;
+}
+.home_title span
+{
+	color: #e95a5a;
+}
+.home_text
+{
+	margin-top: 7px;
+}
+.home_text p
+{
+	color: #FFFFFF;
+}
 .breadcrumbs ul li
 {
 	display: inline-block;
