--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -162,10 +162,12 @@ section
 .float_left
 {
 	float: left;
+    
 }
 .float_right
 {
 	float: right;
+    
 }
 .trans_200
 {
@@ -918,7 +920,11 @@ section
 }
 .billing
 {
-	
+	background: #f9f9f9;
+    padding-left: 40px;
+	;
+	padding-bottom: 25px;
+	padding-right: 40px;
 }
 .section_title
 {
@@ -935,6 +941,55 @@ section
 	margin-top: 3px;
     
 }
+
+
+.section_subtitle p
+{
+	font-size: 20px;
+	font-weight: 450;
+	color: #2c2c2e;
+	line-height: inherit;
+}
+.section_subtitle ul li
+{
+    text-indent: -1.3em;
+    
+}
+
+.image1
+{
+    
+  border: 5px solid #c8c6c6;
+  border-radius: 4px;
+  margin-bottom: 10px;
+   
+}
+.image2
+{
+    
+  border: 5px solid #c8c6c6;
+  border-radius: 4px;
+  margin-bottom: 10px; 
+      
+}
+
+.section_subtitle ul li
+{
+    text-indent: -1.3em;
+    font-size: 20px;
+	font-weight: 450;
+	color: #2c2c2e;
+}
+.section_subtitle ul 
+{
+    margin-left: 30px;
+    
+}
+.section_subtitle li
+{
+    margin-bottom: 10px;
+}
+
 
 
 .order
