--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -809,7 +809,7 @@ section
 .home
 {
 	width: 100%;
-	height: 362px;
+	height: 400px;
 	background: #FFFFFF;
 	z-index: 2;
 	padding-top: 130px;
@@ -947,29 +947,35 @@ section
 {
 	font-size: 20px;
 	font-weight: 450;
-	color: #2c2c2e;
+	color: #49494b;
 	line-height: inherit;
 }
 .section_subtitle ul li
 {
     text-indent: -1.3em;
-    
+    font-weight: 450;
+    color: #2c2c2e;
 }
 
 .image1
 {
-    
-  border: 5px solid #c8c6c6;
-  border-radius: 4px;
-  margin-bottom: 10px;
-   
+  margin-top: 18px;
+  margin-bottom: 22px;
 }
+
+.image1 img
+{
+    border: thin solid black;
+    width: 40%;
+}
+   
 .image2
 {
     
-  border: 5px solid #c8c6c6;
+  border: 5px solid #add0c2;
   border-radius: 4px;
-  margin-bottom: 10px; 
+  margin-top: 18px;
+  margin-bottom: 22px; 
       
 }
 
