--- a/styles/contact.css
+++ b/styles/contact.css
@@ -341,6 +341,7 @@ section
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
+    font-family: 'Faster One';
 }
 .header.scrolled .logo a
 {
@@ -833,6 +834,30 @@ section
 {
 	width: 580px;
 }
+
+.home_title
+{
+	font-size: 75px;
+	font-weight: 600;
+	color: #FFFFFF;
+	line-height: 1;
+    font-family: 'Rakkas';
+    -webkit-text-stroke: 2px black;
+}
+.home_title span
+{
+	color: #e95a5a;
+}
+.home_text
+{
+	margin-top: 7px;
+}
+.home_text p
+{
+	color: #FFFFFF;
+}
+
+
 .breadcrumbs ul li
 {
 	display: inline-block;
