--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -240,6 +240,7 @@ section
 	border: solid 2px #1b1b1b;
 	overflow: hidden;
 	cursor: pointer;
+    
 }
 .button a
 {
@@ -805,8 +806,8 @@ section
 	width: 100%;
 	height: 100%;
 	padding-top: 130px;
-	padding-left: 65px;
-	padding-right: 55px;
+	padding-left: 60px;
+	padding-right: 60px;
 	padding-bottom: 30px;
 }
 .home_slider_background
@@ -843,7 +844,7 @@ section
 	color: #FFFFFF;
 	line-height: 1.2;
     font-family: 'Rakkas';
-    padding-left: 10px;
+    padding-left: 30px;
 }
 .home_slider_subtitle
 {
@@ -852,10 +853,14 @@ section
 	color: #FFFFFF;
 	line-height: 1.6;
 	margin-top: 30px;
+    padding-left: 20px;
 }
 .home_button
 {
 	margin-top: 40px;
+    margin-left: 20px;
+    
+   
 }
 .home_slider_dots_container
 {
@@ -873,6 +878,7 @@ section
 	position: absolute;
 	left: 15px;
 	bottom: 56px;
+    margin-left: 10px;
 }
 .home_slider_custom_dots
 {
@@ -913,11 +919,15 @@ section
 6. Ads
 *********************************/
 
+
+
+
 .avds
 {
 	width: 100%;
 	background: #FFFFFF;
 	z-index: 2;
+    
 }
 .avds_container
 {
@@ -995,7 +1005,7 @@ section
 .avds_small_content
 {
 	max-width: 250px;
-	padding-top: 57px;
+	padding-top: 40px;
 	padding-left: 31px;
 	padding-right: 30px;
 }
@@ -1041,8 +1051,8 @@ section
 {
 	position: relative;
 	display: inline-block;
-	font-size: 14px;
-	font-weight: 600;
+	font-size: 24px;
+	font-weight: 750;
 	color: #FFFFFF;
 }
 .avds_link a::after
@@ -1084,7 +1094,7 @@ section
 }
 .avds_text
 {
-	font-size: 14px;
+	font-size: 18px;
 	font-weight: 400;
 	color: #FFFFFF;
 	line-height: 2.0;
@@ -1103,7 +1113,8 @@ section
 }
 .avds_link_large
 {
-	margin-top: 40px;
+	margin-top: 20px;
+    margin-bottom: 
 }
 
 /*********************************
