--- a/styles/contact.css
+++ b/styles/contact.css
@@ -315,12 +315,12 @@ section
 {
 	width: 100%;
 	z-index: 1;
-	background: #FFFFFF;
+	background: #bde6c0;
 }
 .header_content
 {
 	width: 100%;
-	height: 130px;
+	height: 70px;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
@@ -333,7 +333,7 @@ section
 }
 .logo a
 {
-	font-size: 30px;
+	font-size: 40px;
 	font-weight: 700;
 	color: #1b1b1b;
 	-webkit-transition: all 200ms ease;
@@ -342,10 +342,12 @@ section
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
     font-family: 'Faster One';
+    
+
 }
 .header.scrolled .logo a
 {
-	font-size: 24px;
+	font-size: 40px;
 }
 .main_nav
 {
@@ -402,9 +404,9 @@ section
 	right: -15px;
 	top: calc(100% + 20px);
 	text-align: right;
-	background: #FFFFFF;
+	background: #c1e7c4;
 	padding-right: 25px;
-	padding-left: 35px;
+	padding-left: 25px;
 	padding-top: 25px;
 	padding-bottom: 25px;
 	visibility: hidden;
@@ -625,9 +627,9 @@ section
 	position: fixed;
 	top: 0;
 	right: -400px;
-	width: 400px;
+	width: 250px;
 	height: 100vh;
-	background: #e4e4e4;
+	background: #c7d5e1;
 	z-index: 101;
 }
 .menu.active
@@ -638,7 +640,7 @@ section
 {
 	width: 100%;
 	height: 0px;
-	padding-top: 130px;
+	padding-top: 70px;
 }
 .menu.active .menu_container
 {
@@ -798,7 +800,7 @@ section
 	height: 362px;
 	background: #FFFFFF;
 	z-index: 2;
-	padding-top: 130px;
+	padding-top: 72px;
 	padding-left: 60px;
 	padding-right: 60px;
 }
